﻿Release Notes for ThwargLauncher

Launcher Created 2015 by Jonathan Newberry and Perry Rapp.
For use with the Asheron's Call game client to streamline multiple account/server instances.

Starting with most recent:


VERSION ?
- Persist location of AddServer window
VERSION 4.2.0.0   (2017-03-06)
- Added an Add Server UI to add either PhatAC or ACE servers to the server list
- Implemented a fix for Logging characters all the way in to the game
- Fixed bug that could potentially crash launcher when server list wasn't recieved correctly
- Improvements to server list UI
- Various small bug fixes throughout
VERSION 4.0.0.1   (2017-02-25)
- Fixed a small bug to correct adding custom PhatAC servers from the .xml
- Removed reference to PhatAC server URL from source
- Fixed text to read AC Client File Location from Launcher
- Fixed the edit users window to remove references to the old "Live" servers
- This version still not successfully detecting launch, so launcher will keep trying
VERSION 4.0.0.0    (2017-02-16)
- Modified to support EMU development for both Phat AC and ACE server types
- This version not successfully detecting launch, so launcher will keep trying
VERSION 3.2.4.0    (2016-06-20)
- Changed name from ACAccountManager to ThwargLauncher
- Unable to log in characters with Apostrophe in the name
- Sometimes accounts didn't realize they were closed (they were having an existential crisis)
VERSION 3.2.2.0   (2016-06-13)
- Updated bug with installer.
- Fixed an issue where the launcher would delete profiles.
VERSION 3.2.0.0   (2016-06-13)
- Fixed problem with launching profiles
- Added status symbols to character display in launcher (customizable via app.config)
- Added team names to character display in launcher
- Added broadcast and team commands to MagFilter - see Documentation
	- Added Diagnostics window
VERSION 3.0.0.0   (2016-04-28)
	- Added new Heartbeat functionality to maintain and detect running games.