@@ -14,25 +14,10 @@ using System.Diagnostics;
 using System.IO;
 using ThwargLauncher.AccountManagement;
 using WindowPlacementUtil;
+using ThwargLauncher.UtilityCode;
 
 namespace ThwargLauncher
 {
-
-    public static class LinqExtension
-    {
-        public static IEnumerable<TSource> DistinctBy<TSource, TKey>(this IEnumerable<TSource> source, Func<TSource, TKey> keySelector)
-        {
-            HashSet<TKey> seenKeys = new HashSet<TKey>();
-            foreach (TSource element in source)
-            {
-                if (seenKeys.Add(keySelector(element)))
-                {
-                    yield return element;
-                }
-            }
-        }
-
-    }
     /// <summary>
     /// Interaction logic for MainWindow.xaml
     /// </summary>
